<resources>
    <string name="app_name">CalDis</string>
    <string name="add_more">Add More</string>
    <string name="item">Item</string>
    <string name="price">Price per item</string>
    <string name="qty">Qty</string>
    <string name="your_item_list">Your Item List</string>
    <string name="no_data">Empty</string>
    <string name="something_wrong">Oops. Something Wrong</string>
    <string name="calculate">Calculate</string>
    <string name="option_discount_percent">Calculate your payment with Percent Discount</string>
    <string name="percent">Percent</string>
    <string name="nominal">Nominal</string>
    <string name="option_discount_nominal">Calculate your payment with Nominal Discount</string>
    <string name="discount">Discount</string>
    <string name="choose_discount">Choose Discount</string>
    <string name="detail_discount">Detail Discount</string>
    <string name="max_discount">Max Discount</string>
    <string name="thirty_five">35</string>
    <string name="one_thousand">100.000</string>
    <string name="id_currency">Rp</string>
    <string name="additional">Additional</string>
    <string name="fifteen_thousand">15.000</string>
    <string name="next">Next</string>
    <string name="item_name">Item name</string>
    <string name="input_detail_item">Input Detail Item</string>
    <string name="item_price">Item price</string>
    <string name="x">X</string>
    <string name="del_item">Del Item</string>
    <string name="add_item">Add Item</string>
    <string name="edit_item">Edit Item</string>
    <string name="plus">Plus</string>
    <string name="minus">Minus</string>
    <string name="percent_icon">%</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete_item">Delete Item</string>
    <string name="confirmation_delete">Are you sure want to delete this item?</string>
    <string name="shopping">Shopping</string>
    <string name="total">Total</string>
    <string name="total_after_discount">Total after discount</string>
    <string name="price_per_unit">Price per unit</string>
    <string name="total_discount_for_this_item">Total Discount for\nthis item</string>
    <string name="quantity">Quantity</string>
    <string name="discount_per_unit">Discount per unit</string>
    <string name="price_per_unit_after_discount">Price per unit\nafter discount</string>
    <string name="discount_type">Discount Type</string>
    <string name="click_to_see_detail">Click To See Detail</string>
    <string name="three_dots">...</string>
    <string name="edit_discount">Edit Discount</string>
</resources>