<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_title_form_discount_percent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/discount"
        android:textSize="@dimen/_12ssp"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ed_discount_percent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/background_outline_black_1dp"
        app:layout_constraintStart_toStartOf="@+id/tv_title_form_discount_percent"
        app:layout_constraintTop_toBottomOf="@id/tv_title_form_discount_percent">

        <EditText
            android:id="@+id/ed_percent"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_50sdp"
            android:inputType="number"
            android:padding="@dimen/_10sdp"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_5sdp"
            android:gravity="start|center"
            android:drawablePadding="@dimen/_3sdp"
            android:background="@null"
            android:hint="@string/thirty_five"
            android:maxLength="3"
            android:textSize="@dimen/_15ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:ignore="Autofill,LabelFor,TextFields" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_5sdp"
            android:textSize="@dimen/_15ssp"
            android:text="@string/percent_icon"
            app:layout_constraintStart_toEndOf="@id/ed_percent"
            app:layout_constraintTop_toTopOf="@id/ed_percent"
            app:layout_constraintBottom_toBottomOf="@id/ed_percent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>



    <TextView
        android:id="@+id/tv_title_form_max_discount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:gravity="center"
        android:text="@string/max_discount"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_title_form_discount_percent"
        app:layout_constraintStart_toEndOf="@+id/ed_discount_percent"
        app:layout_constraintTop_toTopOf="@+id/tv_title_form_discount_percent" />

    <include
        android:id="@+id/ed_max_discount"
        layout="@layout/view_edit_text_currency"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_title_form_max_discount"
        app:layout_constraintTop_toTopOf="@+id/ed_discount_percent"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>