<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.shoppinglist.ShoppingItemListActivity">

    <include
        android:id="@+id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        layout="@layout/toolbar_cal_dis"/>

    <TextView
        android:id="@+id/tv_title_discount_detail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:fontFamily="@font/poppins_bold"
        android:gravity="start|center"
        android:textSize="@dimen/_12ssp"
        android:text="@string/detail_discount"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <include
        android:id="@+id/layout_detail_discount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        layout="@layout/view_detail_discount"
        app:layout_constraintStart_toStartOf="@id/tv_title_discount_detail"
        app:layout_constraintEnd_toEndOf="@id/tv_title_discount_detail"
        app:layout_constraintTop_toBottomOf="@id/tv_title_discount_detail"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_edit_discount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:background="@drawable/background_filled_rounded_primary_color"
        android:fontFamily="@font/poppins_normal"
        android:text="@string/edit_discount"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/tv_title"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tv_title"
        app:layout_constraintTop_toBottomOf="@id/layout_detail_discount" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="@font/poppins_normal"
        android:gravity="start|center"
        android:text="@string/your_item_list"
        android:textSize="@dimen/_20ssp"
        app:layout_constraintEnd_toEndOf="@id/layout_detail_discount"
        app:layout_constraintStart_toStartOf="@id/layout_detail_discount"
        app:layout_constraintTop_toBottomOf="@id/btn_edit_discount" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_item_shopping"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="@dimen/_10sdp"
        app:layout_constraintBottom_toTopOf="@+id/btn_calculate"
        app:layout_constraintEnd_toEndOf="@+id/tv_title"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/tv_title"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        tools:itemCount="3"
        tools:listitem="@layout/item_list_shopping" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_calculate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_5sdp"
        android:background="@drawable/background_filled_rounded_primary_color"
        android:fontFamily="@font/poppins_normal"
        android:text="@string/calculate"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btn_add_item"
        app:layout_constraintEnd_toEndOf="@+id/tv_title"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tv_title" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_delete_item"
        android:layout_width="0dp"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:background="@drawable/background_filled_rounded_red_color"
        android:fontFamily="@font/poppins_bold"
        android:gravity="center"
        android:text="@string/del_item"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/btn_add_item"
        app:layout_constraintEnd_toStartOf="@id/btn_add_item"
        app:layout_constraintStart_toStartOf="@+id/tv_title"
        app:layout_constraintTop_toTopOf="@+id/btn_add_item" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_add_item"
        android:layout_width="0dp"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:background="@drawable/background_filled_rounded_primary_color"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/add_item"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tv_title"
        app:layout_constraintStart_toEndOf="@+id/btn_delete_item" />

    <include
        android:id="@+id/view_loading"
        layout="@layout/view_loading"
        android:visibility="gone"
        android:elevation="@dimen/_5sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <include
        android:id="@+id/view_empty"
        android:layout_width="0dp"
        android:layout_height="0dp"
        layout="@layout/view_empty"
        android:elevation="@dimen/_5sdp"
        tools:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/btn_add_item"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/clg_not_empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        tools:visibility="visible"
        app:constraint_referenced_ids="rv_item_shopping, btn_delete_item, btn_calculate"/>

    <FrameLayout
        android:id="@+id/fl_fragment_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/adaptive_background_color"
        android:clickable="true"
        android:focusable="true"
        android:visibility="gone"
        android:elevation="@dimen/_5sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>