<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.form.DiscountFormActivity">

    <include
        android:id="@+id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        layout="@layout/toolbar_discal"/>

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:gravity="center"
        android:textSize="@dimen/_20ssp"
        android:fontFamily="@font/poppins"
        android:text="@string/your_item_list"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:padding="@dimen/_5sdp"
        android:background="@drawable/background_filled_rounded_primary_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_title"
        app:layout_constraintTop_toBottomOf="@id/tv_title">

        <TextView
            android:id="@+id/tv_item_name"
            android:layout_width="@dimen/width_item_name"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/poppins"
            android:gravity="center"
            android:text="@string/item"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintEnd_toStartOf="@id/tv_item_price"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_item_price"
            android:layout_width="@dimen/width_item_price"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:gravity="center"
            android:text="@string/price"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintBottom_toBottomOf="@id/tv_item_name"
            app:layout_constraintEnd_toStartOf="@id/tv_item_quantity"
            app:layout_constraintStart_toEndOf="@id/tv_item_name"
            app:layout_constraintTop_toTopOf="@+id/tv_item_name" />

        <TextView
            android:id="@+id/tv_item_quantity"
            android:layout_width="@dimen/width_item_qty"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:gravity="center"
            android:text="@string/qty"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintBottom_toBottomOf="@id/tv_item_price"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_item_price"
            app:layout_constraintTop_toTopOf="@+id/tv_item_price"
            app:layout_constraintVertical_bias="0.0" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_item_form"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:layout_constraintEnd_toEndOf="@+id/tv_item_quantity"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/tv_item_name"
            app:layout_constraintTop_toBottomOf="@id/tv_item_name"
            tools:itemCount="3"
            tools:listitem="@layout/item_list_form" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <EditText
        android:id="@+id/ed_discount"
        android:layout_width="@dimen/width_item_name"
        android:layout_height="wrap_content"
        android:autofillHints="null"
        android:gravity="center"
        android:inputType="textAutoComplete"
        android:padding="@dimen/_2sdp"
        app:layout_constraintHeight_min="@dimen/_40sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ed_max_discount"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/ed_max_discount"
        android:layout_width="@dimen/width_item_name"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30sdp"
        android:autofillHints="null"
        android:gravity="center"
        android:inputType="textAutoComplete"
        android:padding="@dimen/_2sdp"
        app:layout_constraintHeight_min="@dimen/_40sdp"
        app:layout_constraintStart_toEndOf="@+id/ed_discount"
        app:layout_constraintTop_toBottomOf="@+id/cl_container"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/ed_discount_nominal"
        android:layout_width="@dimen/width_item_name"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30sdp"
        android:autofillHints="null"
        android:gravity="center"
        android:inputType="textAutoComplete"
        android:padding="@dimen/_2sdp"
        app:layout_constraintHeight_min="@dimen/_40sdp"
        app:layout_constraintStart_toEndOf="@+id/ed_max_discount"
        app:layout_constraintTop_toBottomOf="@+id/cl_container"
        tools:ignore="LabelFor" />


    <TextView
        android:id="@+id/tv_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="@font/poppins"
        android:gravity="center"
        tools:text="@string/your_item_list"
        android:textSize="@dimen/_11ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ed_discount" />

    <Button
        android:id="@+id/btn_calculate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_10sdp"
        android:background="@drawable/background_filled_rounded_primary_color"
        android:fontFamily="@font/poppins"
        android:text="@string/calculate"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/cl_container"
        app:layout_constraintStart_toStartOf="@+id/cl_container" />

    <include
        android:id="@+id/view_loading"
        layout="@layout/view_loading"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>