<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:background="#90000000"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingHorizontal="16dp"
    android:scrollbars="horizontal">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_filled_rounded_white"
        android:padding="@dimen/_10sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintCircleRadius="@dimen/_8sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:fontFamily="@font/poppins_bold"
            tools:text="Some Title"
            android:textSize="@dimen/_19ssp"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view_barrier"
            android:layout_width="0dp"
            android:layout_height="@dimen/_1sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/barrier"
            app:layout_constraintEnd_toEndOf="@id/tv_title"
            app:layout_constraintStart_toStartOf="@id/tv_title"
            app:layout_constraintTop_toBottomOf="@id/tv_title" />


        <TextView
            android:id="@+id/tv_subtitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="center"
            android:textSize="@dimen/_13ssp"
            app:layout_constraintEnd_toEndOf="@+id/view_barrier"
            app:layout_constraintStart_toStartOf="@+id/view_barrier"
            app:layout_constraintTop_toBottomOf="@+id/view_barrier"
            tools:text="@string/confirmation_delete" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_negative"
            android:layout_width="0dp"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:background="@drawable/background_filled_rounded_red_color"
            android:fontFamily="@font/poppins_bold"
            android:gravity="center"
            android:text="@string/no"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@+id/btn_positive"
            app:layout_constraintEnd_toStartOf="@id/btn_positive"
            app:layout_constraintStart_toStartOf="@+id/tv_title"
            app:layout_constraintTop_toTopOf="@+id/btn_positive" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_positive"
            android:layout_width="0dp"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/background_filled_rounded_primary_color"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/yes"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/tv_subtitle"
            app:layout_constraintEnd_toEndOf="@+id/tv_title"
            app:layout_constraintStart_toEndOf="@+id/btn_negative" />

        <View
            android:id="@+id/view_barrier_2"
            android:layout_width="0dp"
            android:layout_height="@dimen/_1sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/barrier"
            app:layout_constraintEnd_toEndOf="@id/tv_title"
            app:layout_constraintStart_toStartOf="@id/tv_title"
            app:layout_constraintTop_toBottomOf="@+id/btn_positive" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
